<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_feeds"
            android:checked="true"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/menu_feeds" />
        <item
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/menu_favorites" />

        <item android:title="@string/more">
            <menu>
                <item
                    android:id="@+id/menu_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/menu_settings" />
                <item
                    android:id="@+id/menu_help"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/menu_help" />
            </menu>
        </item>
    </group>

</menu>