<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="20dp"
    tools:context="com.lynn9388.irss.dialog.AddFeedDialogFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_add_feed_dialog_feed_name"
            android:hint="@string/text_feed_name"
            android:textSize="16sp"
            android:text="ipc.me" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_add_feed_dialog_feed_url"
            android:inputType="textUri"
            android:hint="@string/text_feed_url"
            android:textSize="16sp"
            android:text="@string/text_feed_url_prefix" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
